<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="enableNotif"
        android:summary="@string/notificationsSummary"
        android:title="@string/notifications" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="enableNotif"
        android:key="headsUp"
        android:summary="@string/headsUpSummary"
        android:title="@string/headsUp" />
    <ListPreference
        android:defaultValue="3600000"
        android:dependency="enableNotif"
        android:entries="@array/intervalPrefTitles"
        android:entryValues="@array/intervalPrefValues"
        android:key="notifInterval"
        android:summary="@string/notifIntervalSummary"
        android:title="@string/notifInterval" />

</PreferenceScreen>
