<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_all_anime"
            android:icon="@drawable/ic_all"
            android:title="@string/nav_all_anime" />
        <item
            android:id="@+id/nav_live_animes"
            android:icon="@drawable/ic_live_now"
            android:title="@string/nav_live_animes" />
    </group>

    <group
        android:id="@+id/nul"
        android:menuCategory="system">
        <item
            android:id="@+id/nav_log_in"
            android:icon="@drawable/ic_account"
            android:title="@string/log_in" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>


</menu>
