<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/basicTextHeader"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#3f65b0"
                    android:text="@string/basicParams"
                    android:textAlignment="center"
                    android:textAppearance="@style/titleStyle" />

                <TextView
                    android:id="@+id/chooseAState"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/basicTextHeader"
                    android:layout_alignBaseline="@+id/malSetStatus"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingEnd="20dp"
                    android:text="@string/stateChooser"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/malSetStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/basicTextHeader"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/chooseAState"
                    android:contentDescription="@string/stateChooser"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/mal_status"
                    android:paddingBottom="15dp" />

                <TextView
                    android:id="@+id/malSetEpisodes"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@id/malSetStatus"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/mal_seenEpisodesNumber" />

                <TextView
                    android:id="@+id/malSetStarsText"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/malSetEpisodes"
                    android:layout_alignBaseline="@+id/malSetStars"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingEnd="20dp"
                    android:text="@string/rate" />

                <Spinner
                    android:id="@+id/malSetStars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/malSetEpisodes"
                    android:layout_alignStart="@id/malSetStatus"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/malSetStarsText"
                    android:contentDescription="@string/rate"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/mal_score"
                    android:paddingBottom="15dp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/advancedTextHeader"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#3f65b0"
                    android:text="@string/advancedParams"
                    android:textAlignment="center"
                    android:textAppearance="@style/titleStyle" />

                <TextView
                    android:id="@+id/malSetStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/advancedTextHeader"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/mal_startDate" />

                <TextView
                    android:id="@+id/malSetEnd"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/malSetStart"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/mal_endDate" />

                <include
                    android:id="@+id/malSetTags"
                    layout="@layout/chip_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/malSetEnd"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/malSetPriorityText"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/malSetTags"
                    android:layout_alignBaseline="@id/malSetPriority"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/mal_priority" />

                <Spinner
                    android:id="@+id/malSetPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/malSetTags"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/malSetPriorityText"
                    android:contentDescription="@string/mal_priorityChooser"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/mal_priority"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp" />

                <TextView
                    android:id="@+id/malSetSourceText"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/malSetPriority"
                    android:layout_alignBaseline="@+id/malSetSource"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/source" />

                <Spinner
                    android:id="@+id/malSetSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/malSetPriority"
                    android:layout_alignStart="@id/malSetPriority"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/malSetSourceText"
                    android:contentDescription="@string/mal_sourceChooser"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/mal_source"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp" />

                <TextView
                    android:id="@+id/malSetRewatchTimes"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@id/malSetSource"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/mal_rewatchTimes" />

                <TextView
                    android:id="@+id/malSetRewatchProbabilityText"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_below="@id/malSetRewatchTimes"
                    android:layout_alignBaseline="@+id/malSetRewatchProbability"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/mal_rewatchProbability" />

                <Spinner
                    android:id="@+id/malSetRewatchProbability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/malSetRewatchTimes"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/malSetRewatchProbabilityText"
                    android:contentDescription="@string/mal_rewatchProbabilityChooser"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/mal_rewatch"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/malSetRewatchProbability"
                    android:layout_margin="10dp"
                    android:hint="@string/newComment"
                    app:hintTextColor="@color/celestito">

                    <AutoCompleteTextView
                        android:id="@+id/malSetComment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionDone"
                        android:minHeight="?attr/actionBarSize"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/malEditSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@android:string/ok"
            android:textColor="@android:color/white"
            app:backgroundTint="#3f65b0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/malEditDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/mal_deletefromList"
            android:textColor="@android:color/white"
            app:backgroundTint="@android:color/holo_red_light" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>