<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextColor="@color/celestito">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newAcc_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextColor="@color/celestito">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newAcc_user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextColor="@color/celestito">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newAcc_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_acc_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:tint="@android:color/white"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_next" />

    <androidx.cardview.widget.CardView
        android:id="@+id/register_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="gone"
        app:cardBackgroundColor="#594caf50"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center_horizontal"
                android:text="@string/register_success"
                android:textColor="#388e3c"
                android:textSize="17sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_registerFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textColor="#388e3c"
                app:backgroundTint="@android:color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
