<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:padding="16dp">

    <TextView
        android:id="@+id/overflow_tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/overflow_btn_shortcut"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/overflow_btn_shortcut"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

    <ImageButton
        android:id="@+id/overflow_btn_shortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/overflow_shortcut_description"
        android:tint="?android:attr/textColorSecondary"
        app:srcCompat="@drawable/ic_shortcut" />

    <View
        android:id="@+id/overflow_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/overflow_tv_user_name"
        android:layout_margin="5dp"
        android:background="?colorPrimaryDark" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/overflow_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/overflow_divider"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_account"
        android:text="@string/log_in"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/overflow_btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/overflow_btn_login"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_settings"
        android:text="@string/nav_settings"
        android:textAllCaps="false" />

</RelativeLayout>